Segundo commit de mi sitio web

--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
 </head>
 
 <body>
-    <p class="estPedido">Estado pedido</p>
-    <div class="div1" id="div">
+    <!--<p class="estPedido">Estado pedido</p>-->
+    <a class="button" href="#">Estado pedido</a>
+    <img class="img1" src="images/or1.png" alt="logo compañia">
+    <p class="ask-city">En que ciudad estas?</p>
 
-        <img class="div1-logo" src="images/or.png" alt="logo compañia">
-        <p class="div1-p1">En que ciudad estas?</p>
-        <form class="div1-form" action="#">
-           
-            <select id="ciudad" class="div1-form-select" name="" id="" aria-placeholder="Selecciona" autofocus>
-                <option disabled selected>Selecciona</option>
-                <option value="bello">Bello</option>
-                <option value="envigado">Envigado</option>
-                <option value="itagui">Itagui</option>
-                <option value="medellin">Medellín</option>
-                <option value="sabaneta">Sabaneta</option>
-            </select>
-        </form>
-    </div>
-
+    <form class="form" action="#">
+        <select id="ciudad" class="form-select" name="" id="" aria-placeholder="Selecciona" autofocus>
+            <option disabled selected>Selecciona</option>
+            <option value="bello">Bello</option>
+            <option value="envigado">Envigado</option>
+            <option value="itagui">Itagui</option>
+            <option value="medellin">Medellín</option>
+            <option value="sabaneta">Sabaneta</option>
+        </select>
+    </form>
     <script src="script/scripts.js"></script>
 </body>
 
