Tercer commit de mi sitio web

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <!--<p class="estPedido">Estado pedido</p>-->
-    <a class="button" href="#">Estado pedido</a>
+    <div class="flex-container">
+        <a class="flex-item" href="#">Estado pedido</a>
+    </div>
     <img class="img1" src="images/or1.png" alt="logo compañia">
     <p class="ask-city">En que ciudad estas?</p>
 
@@ -24,6 +26,7 @@
             <option value="sabaneta">Sabaneta</option>
         </select>
     </form>
+
     <script src="script/scripts.js"></script>
 </body>
 
