--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/test.css">
+    <link rel="stylesheet" href="styles/estilo.css">
 </head>
 
 <body id="documento">
@@ -93,7 +93,7 @@
             </form>
         </div>
     </div>
-    <script src="script/test.js"></script>
+    <script src="script/scripts.js"></script>
 </body>
 
 </html>
